Upgrade to Java 21, update deps and stop using preview features