@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>org.roaringbitmap</groupId>
 			<artifactId>RoaringBitmap</artifactId>
-			<version>0.9.47</version>
+			<version>0.9.49</version>
 		</dependency>
 		<dependency>
 			<groupId>ru.vyarus</groupId>
@@ -49,7 +49,6 @@
 				<version>${maven-compiler-plugin-version}</version>
 				<configuration>
 					<release>${maven.compiler.release}</release>
-					<compilerArgs>--enable-preview</compilerArgs>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 				</configuration>
