@@ -32,12 +32,12 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>2.0.7</version>
+			<version>2.0.9</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-jdk14</artifactId>
-			<version>2.0.7</version>
+			<version>2.0.9</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -66,9 +66,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin-version}</version>
-				<configuration>
-					<argLine>--enable-preview</argLine>
-				</configuration>
 			</plugin>
 			
 			<plugin>
@@ -115,7 +112,6 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin-version}</version>
 				<configuration>
-					<compilerArgs>--enable-preview</compilerArgs>
 					<release>${java.version}</release>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
