@@ -6,7 +6,7 @@
 	
 	<properties>
 		<github.spair.version>1.86.10</github.spair.version>
-		<lwjgl.version>3.3.2</lwjgl.version>
+		<lwjgl.version>3.3.3</lwjgl.version>
 		<joml.version>1.10.5</joml.version>
 		<lwjgl.natives>natives-windows</lwjgl.natives>
 	</properties>
@@ -150,7 +150,6 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin-version}</version>
 				<configuration>
-					<compilerArgs>--enable-preview</compilerArgs>
 					<release>${java.version}</release>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
